# LabPilot

./: .gitignore  BACKEND_FIX_COMPLETE.md  FINAL_STATUS.md  GITHUB_SETUP.md  LAUNCH_GUIDE.md  LICENSE  QT_BRIDGE_DEBUG.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  STATUS_REPORT.md  lab_config.toml  launch.sh  pyproject.toml
backend/: launch_backend.sh  main.py  requirements.txt
backend/labpilot_api/routes/: qt_interface.py
backend/routes/: ai_routes.py  device_routes.py  qt_interface.py
docs/: BUILD_SUMMARY.md  CHECKLIST.md  DRIVERS_GUIDE.md  DRIVERS_IMPLEMENTATION.md  FRAMEWORK_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md
examples/: advanced_example.py  my_first_scan.py  simple_scan.py  spectrum_workflow.py
examples/drivers/custom/: __init__.py  my_motor.py
examples/drivers/ni/: daq.py
examples/drivers/visa/: ocean_insight.py
frontend/: README.md  STRUCTURED_CHAT_GUIDE.md  index.html  instrument.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  workflow.html
frontend/src/: App.tsx  main.tsx
frontend/src/api/: index.ts
frontend/src/components/: DeviceModal.tsx  QtBridgeTest.jsx  WorkflowModal.tsx
frontend/src/components/ChatBox/: index.tsx
frontend/src/components/ChatSessionModal/: index.tsx
frontend/src/components/DeviceModal/: index.tsx
frontend/src/components/FloatingChat/: index.tsx
frontend/src/components/FloatingWindow/: index.tsx
frontend/src/components/InstrumentControlWindow/: index.tsx
frontend/src/components/InstrumentControls/: BaseComponents.tsx  SpecificUIs.tsx  index.ts  registry.ts
frontend/src/components/InstrumentUIModal/: index.tsx
frontend/src/components/InstrumentWindow/: index.tsx
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx  index.tsx
frontend/src/components/StructuredInputForm/: index.tsx
frontend/src/components/WorkflowControlWindow/: index.tsx
frontend/src/data/: instruments.ts
frontend/src/pages/: AIChat.tsx  Dashboard.tsx  Data.tsx  Devices.tsx  Flow.tsx  Settings.tsx  TestPage.tsx  Workflows.tsx
frontend/src/store/: index.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: chatSessionManager.ts  qtBridge.d.ts  qtBridge.js
qt_frontend/: README.md  README_QT_MATERIAL.md  README_QT_REACT.md  __init__.py  ai_assistant_page.py  api_client.py  authentic_qudi_windows.py  dashboard_page.py  data_page.py  devices_page.py  hybrid_instrument_windows.py  instrument_windows.py  launch.bat  launch.sh  launch_instrument.py  launch_manager.sh  main.py  manager_main.py  manager_qt_webview.py  qt_bridge.py  qt_material_manager.py  qudi_instrument_windows.py  requirements.txt  session_gui.py  session_manager.py  settings_page.py  test_manager.py  workflows_page.py
src/labpilot_core/: __init__.py  cli.py  server.py  session_config.py
src/labpilot_core/adapters/: __init__.py  _base.py  test_fixtures.py
src/labpilot_core/ai/: __init__.py  ai_session.py  context_builder.py  ollama_provider.py  provider.py  router.py  structured_prompt.py  tool_registry.py  validator.py
src/labpilot_core/api/: __init__.py  dashboard.py
src/labpilot_core/config/: __init__.py
src/labpilot_core/core/: __init__.py  events.py  fsm.py  session.py
src/labpilot_core/device/: __init__.py  protocols.py  schema.py
src/labpilot_core/drivers/: __init__.py  _base.py
src/labpilot_core/gui/: __init__.py  chat_widget.py  dialogs.py  main_window.py
src/labpilot_core/plans/: __init__.py  base.py  scan.py
src/labpilot_core/qt/: __init__.py  bridge.py  dsl.py  factory.py
src/labpilot_core/storage/: __init__.py  catalogue.py  hdf5.py
src/labpilot_core/ui/: parameter_ui.py  parameters.py
src/labpilot_core/workflow/: __init__.py  code_sandbox.py  engine.py  graph.py  nodes.py  store.py  templates.py
src/labpilot_core/workflows/: __init__.py
tests/: __init__.py  adapter_summary.py  conftest.py  phase2_completion.py  test_adapter_registry.py  test_ai_integration.py  test_ai_validation.py  test_events.py  test_fsm.py  test_phase4_config_core.py  test_phase4_config_server.py  test_qt_dsl.py  test_rag_store.py  test_scan.py  test_server_api.py  test_session_persistence.py  test_workflow_system.py
(+73 files in other folders)
